--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ body {
   line-height: 1.65;
 
   background-color: var(--bg-main);
-  background-image: url("assets/Save the Date.png");
+  background-image: url("../assets/Save the Date.png");
   background-repeat: repeat;
   background-size: 600px;
 }
