--- a/css/style.css
+++ b/css/style.css
@@ -199,7 +199,7 @@ h2 {
   top: 0;
   width: 300px;
   height: 100%;
-  background: url("assets/—Pngtree—antiquity black and white ink_3911022.png")
+  background: url("../assets/—Pngtree—antiquity black and white ink_3911022.png")
               no-repeat left center;
   background-size: contain;
   opacity: 0.12;
@@ -214,7 +214,7 @@ h2 {
   top: 80px;
   width: 360px;
   height: 360px;
-  background: url("assets/Save the Date (15).png") no-repeat center;
+  background: url("../assets/Save the Date (15).png") no-repeat center;
   background-size: contain;
   opacity: 0.9;
   pointer-events: none;
